# hdf-experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
_smoke_out/: summary.csv  summary.md
code/: collect_outputs.py  run
code/experiments/fingerprints/: README.md  figure_style.py  make_figure_bo.py  make_figure_ged.py  make_figure_prediction.py  make_figure_qm9_learning_curve.py  mixin_clogp.py  molecule_similarity.py  molecule_similarity__fp.py  molecule_similarity__fp__qm9_smiles.yml  molecule_similarity__fp__zinc250.yml  molecule_similarity__hdc.py  molecule_similarity__hdc__qm9_smiles.yml  molecule_similarity__hdc__zinc250.yml  optimize_molecule_bo.py  optimize_molecule_bo__fp.py  optimize_molecule_bo__fp__clogp.yml  optimize_molecule_bo__fp__freesolv.yml  optimize_molecule_bo__fp__qm9_gap.yml  optimize_molecule_bo__fp__zinc250k.yml  optimize_molecule_bo__hdc.py  optimize_molecule_bo__hdc__clogp.yml  optimize_molecule_bo__hdc__freesolv.yml  optimize_molecule_bo__hdc__qm9_gap.yml  optimize_molecule_bo__random.py  (+36 more)
code/graph_hdc/: __init__.py  binding.py  cli.py  functions.py  graph.py  reconstruct.py  testing.py  utils.py
code/tests/: test_binding.py  test_composite_hypernet.py  test_composite_hypernet_integration.py  test_composite_hypernet_molecules.py  test_ensemble.py  test_ensemble_molecules.py  test_flow.py  test_functions.py  test_graph.py  test_models.py  test_reconstruct.py  test_special_colors.py  test_special_molecules.py  test_testing.py  test_utils.py
data/: README.md
environment/: Dockerfile  postInstall
metadata/: metadata.yml
(+11 files in other folders)
