[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_hdc"
version = "0.1.0"
description = "Hyperdimensional fingerprints: training-free molecular representations"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jonas Teufel", email = "jonseb1998@gmail.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "torch>=2.5,<3.0",
    "torch-geometric>=2.6,<3.0",
    "pytorch-lightning>=2.4,<3.0",
    "pycomex>=0.28",
    "rdkit>=2024.3",
    "scikit-learn>=1.4",
    "numpy>=1.23,<2.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "botorch>=0.11",
    "gpytorch>=1.11",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "umap-learn>=0.5",
    "imbalanced-learn>=0.11",
    "normflows>=1.7",
    "networkx>=3.0",
    "jsonpickle>=4.0,<5.0",
    "python-decouple>=3.6",
    "rich-click>=1.8,<1.9",
    "click>=8.0",
    "jinja2>=3.0",
    "chem_mat_database @ git+https://github.com/the16thpythonist/chem_mat_data.git",
]

[tool.setuptools.packages.find]
where = ["code"]
include = ["graph_hdc*"]

[tool.pytest.ini_options]
testpaths = ["code/tests"]
markers = [
    "localonly: tests that require a special local setup and are skipped in CI",
]
